tests/auto/qml/qqmlecmascript/data/qmlTypeWrapperArgs2.qml
@@ -1,0 +1,9 @@
+import QtQml
+import QtQml as NS
+
+QtObject {
+    id: root
+    required property QtObject invokableObject
+
+    Component.onCompleted: root.invokableObject.method_QObject(NS)
+}
